# ldapfmt

./: .gitignore  Cargo.toml  README.md  build.rs
.rpm/: ldapfmt.spec
doc/: ldapfmt.1
sample/: authzsvn  homes  ldap_ssh_authorizedkeys  perm  permissions_wiki  sudoaccess
selinux/: README.md  ldapfmt.fc  ldapfmt.te
src/: cli.rs  ldapconf.rs  main.rs
